# workspace

./: .clangd  .gitignore
http_downloader/: Makefile  README.md  downloader.cc  downloader.h  http_downloader.cc  http_downloader.h
study/: .bazeliskrc  .clang-tidy  .gitignore  WORKSPACE  build.sh  run.sh
study/Python/: start.ipynb
study/Python/.ipynb_checkpoints/: start-checkpoint.ipynb
study/cmake_study/ctest/: CMakeLists.txt
study/cmake_study/ctest/math/: CMakeLists.txt  math.cc  math.h
study/cmake_study/ctest/src/: main.cc
study/cmake_study/dependence_switch/: CMakeLists.txt  main.cc
study/cmake_study/dependence_switch/math/: MathFunctions.cc  MathFunctions.h
study/cmake_study/multi_directories/: CMakeLists.txt
study/cmake_study/multi_directories/add/: CMakeLists.txt  add.cc
study/cmake_study/multi_directories/src/: main.cc
study/cmake_study/multi_sources/: CMakeLists.txt  add.h  main.cc
study/cmake_study/start/: CMakeLists.txt  start.cc
study/cmake_study/syntax/demo0/: fuction.cmake  loop.cmake  macro.cmake  variable.cmake
study/cmake_study/syntax/demo1/: CMakeLists.txt  include.cmake  test.cmake
study/course/cpp/: BUILD
study/course/cpp/include/: complex.h
study/course/cpp/src/: complex_test.cc  start.cc
study/course/memery/: BUILD
study/course/memery/src/: main.cc
study/course/new_feature/src/: main.cc
study/cpp_tips/string_test/: BUILD  CMakeLists.txt  main.cc
study/cpp_tips/thread/: BUILD  main.cc  thread_pool.h
study/leetcode/case1/: BUILD  main.cc
study/leetcode/case2/: main.cc
study/leetcode/case3/: BUILD  main.cc
study/leetcode/casex/: main.cc
study/leetcode/interview/: main.cc
study/leetcode/test/: main.cc
study/proto_study/idls/: BUILD  start.proto
study/shell/: shell.md  statrt.sh
study/shell/case0/: condition.sh  loop.sh  run.sh  varible.sh
study/shell/case1/: function.sh
study/socket/: CMakeLists.txt
study/socket/src/: client.cc  client2.cc  client4.cc  server.cc  server2.cc  server3.cc  server4.cc
study/study_bazel/begin/: BUILD
study/study_bazel/begin/src/: start.cc
study/sword_to_offer/case0/: main.cc
study/sword_to_offer/case1/: BUILD  main.cc
study/sword_to_offer/case2/: main.cc
